# aesp

./: README.md  pyproject.toml
docs/: .buildinfo  background.html  citations.html  cli.html  example.html  genindex.html  gui.html  index.html  input_args.html  input_script.html  install.html  introduction.html  objects.inv  outputs.html  publications.html  py-modindex.html  quick_cli.html  quick_start.html  search.html  searchindex.js
docs/_sources/: example.rst  index.rst  input_script.rst  install.rst  introduction.rst  publications.rst  quick_start.rst
docs/_sources/api/: aesp.configs.rst  aesp.gui.rst  aesp.operator.crossover.rst  aesp.operator.mutation.rst  aesp.operator.rst  aesp.rst  aesp.structure.rst  aesp.utils.rst
docs/api/: aesp.calculator.html  aesp.configs.html  aesp.entrypoint.html  aesp.func.html  aesp.gui.html  aesp.html  aesp.operator.crossover.html  aesp.operator.html  aesp.operator.mutation.html  aesp.pyarmor_runtime_000000.html  aesp.structure.html  aesp.utils.html  aesp.workflow.html  api.html
docs/examples/: emt_mg_3d_local.html  matgl_alcl_3d_local.html
docs/source/: outputs.rst
examples/EMT-Al-3D-local/: input-std-bulk.json  std-bulk.json
examples/Gulp-TiO2-3D-local/: kw.gin  pp.gin  std-bulk.json
examples/Matgl-NaCl-3D-local/: std-bulk.json
examples/VASP-BC3-3D-local/: std-bulk.json
examples/VASP-BC3-3D-slurm/: std-bulk.json
examples/VASP-BC3-3D-ssh/: 1_INCAR  2_INCAR  std-bulk.json
source_docs/: Makefile
source_docs/source/: conf.py  index.rst  input_args.rst
src/aesp/: __init__.py  constant.py
(+1762 files in other folders)
